--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -8,7 +8,7 @@ services:
         environment:
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: secret
-            POSTGRES_DB: bibapi-test
+            POSTGRES_DB: insapi-test
             PGDATA: /var/lib/postgresql/data/pgdata
         volumes:
             - ./backups:/backups
@@ -22,7 +22,7 @@ services:
             NODE_ENV: test
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: secret
-            POSTGRES_DB: bibapi-test
+            POSTGRES_DB: insapi-test
             POSTGRES_HOST: postgres-test
         depends_on:
             - redis-test
