--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,14 +10,14 @@ postgres-prod:
     environment:
         POSTGRES_USER: ${POSTGRES_USER}
         POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-        POSTGRES_DB: bibapi-prod
+        POSTGRES_DB: insapi-prod
         PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
         - ./backups:/backups
-        - /applis/bibapi/home/postgresql:/var/lib/postgresql/data/pgdata
+        - /applis/insapi/home/postgresql:/var/lib/postgresql/data/pgdata
 
 server:
-    image: vsnexus.intra.inist.fr:8083/bibcnrs/bibapi:${bibapi_version}
+    image: vsnexus.intra.inist.fr:8083/insermbiblio/insapi:${insapi_version}
     volumes:
         - ./logs:/app/logs
     environment:
@@ -31,7 +31,7 @@ server:
         ticket_secret: ${ticket_secret}
         POSTGRES_USER: ${POSTGRES_USER}
         POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-        POSTGRES_DB: bibapi-prod
+        POSTGRES_DB: insapi-prod
         POSTGRES_HOST: postgres-prod
         MAIL_SERVER_HOST: ${MAIL_SERVER_HOST}
         MAIL_SERVER_PORT: ${MAIL_SERVER_PORT}
