--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
     image: redis:3.2
 
   postgres-dev:
-    image: postgres:9.5
+    image: postgres:10-alpine
     volumes:
         - ./backups:/backups
     environment:
@@ -18,6 +18,13 @@ services:
         - ./postgresql-dev:/var/lib/postgresql/data/pgdata
     ports:
         - 5432:5432
+
+  adminer:
+    image: adminer
+    ports:
+        - 8080:8080
+    depends_on:
+        - postgres-dev
 
   server:
     extends:
