--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -4,7 +4,7 @@ services:
     image: redis:3.2
 
   postgres-test:
-    image: postgres:9.5
+    image: postgres:10-alpine
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
