add new field (Commission spécialisée)
- update docker-compose-dev.yml with nodemon for restart node after each change

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -44,7 +44,7 @@ services:
         - maildev
     ports:
         - 3000:3000
-    command: node launcher.js
+    command: npm run dev
 
   maildev:
     image: djfarrelly/maildev
