--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "NODE_ENV=development nodemon launcher.js",
     "lint": "prettier --no-config --write **/**/**/*.js"
   },
   "repository": {
@@ -34,7 +35,7 @@
     "date-fns": "1.29.0",
     "html-entities": "1.2.1",
     "iconv-lite": "0.4.24",
-    "koa": "1.2.4",
+    "koa": "1.6.2",
     "koa-cors": "0.0.16",
     "koa-jwt": "1.2.0",
     "koa-mount": "1.3.0",
@@ -47,6 +48,7 @@
     "migrat-postgres": "0.1.1",
     "minimist": "1.2.0",
     "nodemailer": "4.6.8",
+    "nodemon": "^1.18.4",
     "redis": "2.8.0",
     "request": "^2.88.0",
     "request-promise": "4.2.2",
