--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -4,7 +4,7 @@ services:
     image: redis:3.2
 
   postgres-test:
-    image: postgres:10-alpine
+    image: postgres:10
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
@@ -14,7 +14,7 @@ services:
       - ./backups:/backups
       - /applis/insapi/home/postgresql-test:/var/lib/postgresql/data/pgdata
   server:
-    image: node:8.9.1
+    image: node:8.12.0
     volumes:
       - .:/app
     working_dir: /app
