clean for futur import

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "co-body": "4.2.0",
     "co-postgres-queries": "0.1.1",
     "config": "2.0.1",
-    "csv": "1.1.0",
+    "csvtojson": "2.0.8",
     "date-fns": "1.29.0",
     "html-entities": "1.2.1",
     "iconv-lite": "0.4.24",
@@ -49,6 +49,7 @@
     "minimist": "1.2.0",
     "nodemailer": "4.6.8",
     "nodemon": "^1.18.4",
+    "pg": "^7.5.0",
     "redis": "2.8.0",
     "request": "^2.88.0",
     "request-promise": "4.2.2",
