--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -12,7 +12,16 @@ services:
       POSTGRES_DB: insapi-test
     volumes:
       - ./backups:/backups
-      - ./postgresql-dev:/var/lib/postgresql/data
+      - ../postgresql-dev:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
+
+  adminer:
+    image: adminer
+    ports:
+      - 8080:8080
+    depends_on:
+      - postgres-test
 
   server:
     image: node:8.12.0
@@ -33,7 +42,7 @@ services:
       - redis-test
       - postgres-test
       - maildev-test
-    command: node_modules/mocha/bin/mocha test/mocha test/mocha/**/*.js
+    command: node_modules/mocha/bin/mocha test/mocha test/mocha/models/*.js
 
   maildev-test:
     image: djfarrelly/maildev
